<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kirsch.jcu.edu.lineswithwatchersandwidget.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tableLayout">

        <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_column="0"
            android:text="@string/Title"
            android:textSize="@dimen/abc_text_size_large_material" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StartX"
            android:id="@+id/textView"
            android:layout_column="2"
            android:textSize="@dimen/abc_text_size_large_material" />

            <EditText
            android:layout_width="75dp"
            android:layout_height="wrap_content"
                android:ems="10"
            android:id="@+id/x1EditText"
            android:layout_column="4"
            android:textSize="@dimen/abc_text_size_large_material"
            android:hint="Start X"
                android:inputType="numberDecimal" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_column="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_column="6"
            android:text="@string/StartY"
            android:textSize="@dimen/abc_text_size_large_material" />

            <EditText
            android:layout_width="75dp"
            android:layout_height="wrap_content"
                android:ems="10"
            android:id="@+id/y1EditText"
            android:layout_column="8"
            android:textSize="@dimen/abc_text_size_large_material"
            android:hint="Start Y"
                android:inputType="numberDecimal" />
    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EndX"
                android:id="@+id/textView3"
                android:layout_column="2"
                android:textSize="@dimen/abc_text_size_large_material" />

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/x2EditText"
                android:layout_column="4"
                android:textSize="@dimen/abc_text_size_large_material"
                android:hint="End X"
                android:inputType="numberDecimal" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_column="6"
                android:text="@string/EndY"
                android:textSize="@dimen/abc_text_size_large_material" />

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/y2EditText"
                android:layout_column="8"
                android:textSize="@dimen/abc_text_size_large_material"
                android:hint="End Y" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>
        <TableRow>
            <View android:id="@+id/separator"
                android:layout_height="2dp"
                android:layout_width="fill_parent"
                android:layout_span="9"
                android:background="#ffffff" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_column="0"
                android:text="@string/Slope"
                android:textSize="@dimen/abc_text_size_large_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slopeTextView"
                android:layout_column="4"
                android:layout_span="4"
                android:textSize="@dimen/abc_text_size_large_material" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_column="0"
                android:text="@string/Intercept"
                android:textSize="@dimen/abc_text_size_large_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/interceptTextView"
                android:layout_column="4"
                android:layout_span="4"
                android:textSize="@dimen/abc_text_size_large_material" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_column="0" />
        </TableRow>
        <TableRow>
            <View android:id="@+id/separator2"
                android:layout_height="2dp"
                android:layout_width="fill_parent"
                android:layout_span="9"
                android:background="#ffffff" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_column="0"
                android:text="@string/UperPrompt"
                android:textSize="@dimen/abc_text_size_large_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_column="2"
                android:text="-100"
                android:textSize="@dimen/abc_text_size_large_material" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/xSeekBar"
                android:layout_column="4"
                android:max="200"
                android:longClickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_column="6"
                android:text="100"
                android:textSize="@dimen/abc_text_size_large_material" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_column="0"
                android:text="@string/FunctionValueX"
                android:textSize="@dimen/abc_text_size_large_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/xInputTextView"
                android:layout_column="4"
                android:layout_span="4"
                android:textSize="@dimen/abc_text_size_large_material" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_column="0"
                android:text="@string/FunctionValueY"
                android:textSize="@dimen/abc_text_size_large_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resultingYTextView"
                android:layout_column="4"
                android:layout_span="4"
                android:textSize="@dimen/abc_text_size_large_material" />
        </TableRow>

    </TableLayout>


</RelativeLayout>
